# Underwriting_Agent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: e2e.yml  test.yml
app/: __init__.py  main.py  ratelimit.py  schemas.py  sse.py
app/routes/: cases.py  health.py  run.py
data/chroma/: chroma.sqlite3
docs/: architecture.md  deployment.md  manual-test-plan.md
docs/superpowers/plans/: 2026-05-26-underwriter-mvp.md  2026-05-27-form-polish.md  2026-05-27-section-notes.md  2026-05-27-v0.3-polish-bundle.md
docs/superpowers/specs/: 2026-05-26-underwriter-mvp-design.md  2026-05-27-form-polish-design.md  2026-05-27-section-notes-design.md  (+1 more)
frontend/: app.js  dark.js  format.js  graph.js  i18n.js  index.html  mock.js  pdf.js  styles.css
notebooks/: Senior_Mortgage_Underwriting_Walkthrough.ipynb
scripts/: build_chroma.py  run_local.sh
tests/: conftest.py  test_agent_asset.py  test_agent_collateral.py  test_agent_credit.py  test_agent_critic.py  test_agent_decision.py  test_agent_income.py  test_agents_base.py  test_api.py  test_e2e.py  test_errors.py  test_errors_module.py  test_graph.py  test_pricing.py  test_rag.py  test_ratelimit.py  test_schemas.py  test_sse.py  test_state.py  test_streaming.py  test_tools.py
underwriter/: __init__.py  errors.py  graph.py  pricing.py  rag.py  state.py  streaming.py  tools.py
underwriter/agents/: __init__.py  asset.py  base.py  collateral.py  credit.py  critic.py  decision.py  income.py
