[project]
name = "underwriter-agent"
version = "0.1.0"
description = "Multi-agent mortgage underwriting system (LangGraph + FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alan Vazquez" }]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "data", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "N", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
